--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="title"><span>About Me</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="C:\Users\NBKRIST\Downloads\IMG-20240805-WA0007.jpg" />
+            <img src="IMG-20240805-WA0007.jpg" />
           </div>
           <div class="right">
             <div class="topic">Designing Is My Passion</div>
